creating a dynamic site that pulls content dynamically using ajax and json to load content. added base file structure and index.html format.

--- a/wave_object/style.css
+++ b/wave_object/style.css
@@ -8,8 +8,15 @@
 .inner-wrap {
   width: 90%;
   margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 h1 {
   font-size: 3em;
+}
+
+h1,
+h2 {
+  margin: 0;
 }
