--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+  width: 100%;
+  background: url('../images/bckgd_lg.jpg') no-repeat;
+  background-size: cover;
+}
+
 #subNav {
   color: green;
 }
