--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,22 @@ body {
 
 #heroImg {
   width: 100%;
-  height: 800px;
-  background: url('../images/bckgd_lg.jpg') no-repeat;
+  height: 335px;
+  background: url('../images/bckgd_sm.jpg') no-repeat;
   background-size: cover;
   margin: 0 auto;
   position: relative;
   z-index: -1;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+  #heroImg {
+    background: url('../images/bckgd_sm@2x.jpg') no-repeat;
+  }
+}
+
+@media only screen and (-moz-min-device-pixel-ratio: 2) {
+  #heroImg {
+    background: url('../images/bckgd_sm@2x.jpg') no-repeat;
+  }
 }
