--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,38 @@
-body {
+/* ============ Global Styles =============== */
+body, footer, #heroImg {
   width: 100%;
+}
+
+body, #pageWrap {
   height: 100%;
 }
 
+header, footer {
+  background: rgba(0, 0, 0, 0.85);
+}
+
+body {
+  background-color: #999;
+}
+
+h1 {
+  margin: 0;
+}
+
+/* ============= Index Styles ================ */
+header h1 {
+  color: white;
+}
+
+#heroImg {
+  height: 480px;
+  background: url('../images/bckgd_sm.jpg');
+  background-size: cover;
+  background-position: -140px;
+  margin: 0 auto;
+}
+
+/* =========== Sub Nav ======================= */
 #subNav {
   color: green;
 }
@@ -11,23 +41,15 @@ body {
   display: none;
 }
 
-#heroImg {
-  width: 100%;
-  height: 335px;
-  background: url('../images/bckgd_sm.jpg') no-repeat;
-  background-size: cover;
-  margin: 0 auto;
-  position: relative;
-  z-index: -1;
+/* ============= Footer Section ================ */
+footer {
+  position: fixed;
+  bottom: 0;
+  color: white;
 }
+
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
-  #heroImg {
-    background: url('../images/bckgd_sm@2x.jpg') no-repeat;
-  }
-}
-
-@media only screen and (-moz-min-device-pixel-ratio: 2) {
   #heroImg {
     background: url('../images/bckgd_sm@2x.jpg') no-repeat;
   }
