--- a/css/style.css
+++ b/css/style.css
@@ -28,27 +28,21 @@ a {
 .active {
   color: #888;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 4733c13d7b97078963747e5e4448eda6ba3d9321
 
 #heroImg {
   margin: 0
 }
 
 
-<<<<<<< HEAD
 figure.thumb {
   height: 60px;
   width: 100px;
   background-color: #333;
-=======
+}
+
 img.thumb {
   height: 60px;
   width: 100px;
->>>>>>> 4733c13d7b97078963747e5e4448eda6ba3d9321
   margin: 5px 20px;
 }
 
@@ -147,7 +141,3 @@ footer p {
   margin: 0;
   float: left;
 }
-<<<<<<< HEAD
->>>>>>> parent of f9fb8dc... Added thumnail json object in data.json file. Removed jsonData() call and replaced with shortened jquery ajax json calls.
-=======
->>>>>>> 4733c13d7b97078963747e5e4448eda6ba3d9321
