--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,24 @@
+/* ================= Global Styles ================= */
+body {
+  width: 100%;
+  overflow: hidden;
+}
+
+h1 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 #nav ul {
@@ -10,6 +29,109 @@ li {
   color: #888;
 }
 
-#nav a {
-  display: block;
+#heroImg {
+  margin: 0
+}
+
+
+img.thumb {
+  height: 60px;
+  width: 100px;
+  margin: 5px 20px;
+}
+
+/* ================== Header Styles ================== */
+header {
+  background: #444;
+  height: 3em;
+}
+
+header > div {
+  display: inline-block;
+  float: left;
+}
+
+header a {
+  color: white;
+}
+
+nav {
+  width: 100%;
+}
+
+#mobileNav {
+  height: 2.1em;
+  width: 2.1em;
+  float: right;
+  background: #888;
+  margin: 0.45em;
+  overflow: hidden;
+}
+
+.nav-wrap {
+  position: relative;
+  background: #444;
+  clear: both;
+  width: 100%;
+  overflow: auto;
+}
+
+.nav-wrap a {
+  display: inline-block;
+}
+
+.nav-wrap > ul {
+  width: 600px;
+}
+
+.nav-wrap > ul > a > li {
+  text-align: center;
+}
+
+/* ========== subNav ============ */
+#subNav {
+  width: 100%;
+  clear: both;
+  height: 30px;
+}
+
+#subNav ul {
+  height: 100%;
+  width: 100%;
+}
+
+#subNav ul li {
+  display: inline-block;
+  float: left;
+  width: 33%;
+  text-align: center;
+}
+
+/* ============ Content ========= */
+.content > h1 {
+  clear: both;
+}
+
+#statsWrap {
+  padding: 20px;
+}
+
+/* ============= Footer ============== */
+footer nav {
+  float: left;
+  width: 47%;
+}
+
+footer nav ul li {
+  display: inline-block;
+  padding-left: 5px;
+}
+
+footer nav ul li:last-child {
+  border-left: 1px solid #888;
+}
+
+footer p {
+  margin: 0;
+  float: left;
 }
