--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* ================= Global Styles ================= */
 body {
   width: 100%;
-  overflow: hidden;
+
 }
 
 h1 {
@@ -34,10 +34,11 @@ a {
 }
 
 
-img.thumb {
+figure.thumb {
   height: 60px;
   width: 100px;
   margin: 5px 20px;
+  background: #222;
 }
 
 /* ================== Header Styles ================== */
@@ -57,6 +58,12 @@ header a {
 
 nav {
   width: 100%;
+}
+
+#nav {
+
+  position: relative;
+  top: -40px;
 }
 
 #mobileNav {
@@ -86,6 +93,13 @@ nav {
 
 .nav-wrap > ul > a > li {
   text-align: center;
+}
+
+.logo-icon {
+  height: 30px;
+  display: block;
+  margin: 0 auto;
+  padding-top: 9px;
 }
 
 /* ========== subNav ============ */
