Added json test example to get data from the json file. This will serve as the code model for the json calls, rather than the vanilla json call which is sloppy. This way I can break out each data sets content in just a little bit of code to assign it values to compare against ajax data.

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,12 @@ figure.thumb {
   clear: both;
 }
 
+#statsWrap,
+article {
+  max-width: 750px;
+  margin: 0 auto;
+}
+
 /* ============= Footer ============== */
 footer nav {
   float: left;
