--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a {
 }
 
 #bodyWrap {
-  padding: .8em;
+  padding: 0 0.8em;
 }
 
 form {
@@ -115,7 +115,6 @@ figure.thumb {
 #subNav {
   width: 100%;
   clear: both;
-  height: 30px;
 }
 
 #subNav ul {
@@ -126,8 +125,24 @@ figure.thumb {
 #subNav ul li {
   display: inline-block;
   float: left;
-  width: 33%;
+  width: 30%;
+  padding: 6px 0;
   text-align: center;
+  border: 1px solid green;
+  border-radius: 5px;
+  margin-right: 3.9%;
+}
+
+#subNav ul li:last-child {
+  float: right;
+  margin-right: 0;
+}
+
+#subNav a {
+  box-sizing: border-box;
+  font-size: 1em;
+  padding: inherit;
+  display: block;
 }
 
 /* ============ Content ========= */
