Added a gallery toggle button and gallery section. Using an overflow for the gallery currently, when it's not almost 1am I'll build the image to reflect the body width property, relying on window width to determine image size.

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a {
   padding: 0 0.8em;
   max-width: 800px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 form {
@@ -159,10 +160,28 @@ article {
   margin: 0 auto;
 }
 
+/* ============= Gallery ==============*/
+#galleryWrap {
+  overflow: scroll;
+}
+
+#gallery {
+  display: none;
+  width: 2600px;
+  height: 400px;
+}
+
+#gallery img {
+  width: 100%;
+  max-width: 800px;
+  height: 400px;
+  background-color: #333;
+}
+
 /* ============= Footer ============== */
 footer {
   width: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
 }
 footer nav {
