--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ body,
 #bodyWrap {
   padding: 0;
   margin: 0 auto;
+  background-position: center;
+  background-size: cover;
 }
 
 form {
@@ -238,21 +240,19 @@ footer p {
 }
 
 /* ============== BodyWrap backgrounds ========= */
-@media only screen and (min-width: 1025px) and (max-width: 2560px) and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (max-width: 2560px) and (min--moz-device-pixel-ratio: 1.5),
-only screen and (max-width: 2560px) and (min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1025px) and (max-width: 1440px) and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min-width: 1025px) and (max-width: 1440px) and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-width: 1025px) and (max-width: 1440px) and (min-device-pixel-ratio: 1.5) {
   #bodyWrap {
     background-image: url('../images/bckgd_lg@2x.jpg');
-    background-position: center;
   }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5),
-only screen and (max-width: 1024px) and (min--moz-device-pixel-ratio: 1.5),
-only screen and (max-width: 1024px) and (min-device-pixel-ratio: 1.5) {
+only screen and (min-width: 481px) and (max-width: 1024px) and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-width: 481px) and (max-width: 1024px) and (min-device-pixel-ratio: 1.5) {
   #bodyWrap {
     background-image: url('../images/bckgd_md@2x.jpg');
-    background-position: center;
   }
 }
 
@@ -261,6 +261,5 @@ only screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 1.5),
 only screen and (max-width: 480px) and (min-device-pixel-ratio: 1.5) {
   #bodyWrap {
     background-image: url('../images/bckgd_sm@2x.jpg');
-    background-position: center;
   }
 }
