Just some quick adjustments to the mobile nav button. Right now a span element is being displayed horizontally across the button, This will become a plus sign that when clicked, will transform into a X and display the navigation menu.

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,13 @@ nav {
   width: 100%;
 }
 
+#mobileNav a span {
+  border-bottom: 2px solid black;
+  position: relative;
+  top:16px;
+  display: block;
+}
+
 .nav-wrap {
   position: relative;
   background: #444;
