Added a constructor function to play around with the idea of data based ajax calls, but this will ultimately will mean multiple ajax calls being made per event, which will be undesireable. The way it had been done previously is preferential.

--- a/css/flex.css
+++ b/css/flex.css
@@ -16,3 +16,8 @@ ul,
 p {
   margin: 0;
 }
+
+/* ===================== Global Header ======================== */
+/* ===================== Local Header ========================= */
+/* ===================== Main Display Section ================= */
+/* ===================== Footer =============================== */
