Updated stylesheet and removed flex.css.

--- a/css/style.css
+++ b/css/style.css
@@ -23,268 +23,5 @@ li {
 
 a {
   text-decoration: none;
-  color: white;
-}
-
-#nav ul {
-  display: none;
-}
-
-.active a {
-  color: #444;
-  font-weight: bold;
-}
-
-#heroImg {
-  margin: 0
-}
-
-body,
-#pageWrap {
-  height: 100%;
-}
-
-#bodyWrap {
-  height: 90%;
-}
-
-#bodyWrap {
-  padding: 0;
-  margin: 0 auto;
-  background-position: center;
-  background-size: cover;
-}
-
-form {
-  width: 300px;
-  margin: 0 auto;
-}
-
-/* ================== Header Styles ================== */
-header {
-  background: #444;
-  height: 3em;
-}
-
-header > div {
-  display: inline-block;
-  float: left;
-}
-
-header a {
-  color: white;
-}
-
-nav {
-  width: 100%;
-}
-
-a.home {
-  display: block;
-}
-
-#nav {
-
-  position: relative;
-  top: -40px;
-}
-
-#mobileNav {
-  height: 2.1em;
-  width: 2.1em;
-  float: right;
-  background: #888;
-  margin: 0.45em;
-  overflow: hidden;
-}
-
-#mobileNav a {
-  display: block;
-  height: 100%;
-  width: 100%;
-}
-
-#mobileNav a span {
-  border-bottom: 2px solid black;
-  position: relative;
-  top:16px;
-  display: block;
-}
-
-.nav-wrap {
-  position: relative;
-  background: #444;
-  clear: both;
-  width: 100%;
-  overflow: auto;
-  z-index: 3;
-}
-
-.nav-wrap a {
-  display: inline-block;
-}
-
-.nav-wrap > ul {
-  width: 600px;
-}
-
-.nav-wrap > ul > a > li {
-  text-align: center;
-}
-
-.logo-icon {
-  height: 30px;
-  display: block;
-  margin: 0 auto;
-  padding-top: 9px;
-}
-
-figure.thumb {
-  height: 60px;
-  width: 100px;
-  margin: 5px 20px;
-  background: #222;
-}
-
-
-/* ========== subNav ============ */
-#subNav {
-  width: 100%;
-  clear: both;
-}
-
-#subNav ul {
-  height: 100%;
-  width: 100%;
-}
-
-#subNav ul li {
-  display: inline-block;
-  float: left;
-  width: 33.32%;
-  padding: 6px 0;
-  text-align: center;
-  background-color: #444;
-}
-
-#subNav a {
-  box-sizing: border-box;
-  font-size: 1em;
-  padding: inherit;
-  display: block;
-}
-
-#subNav li.active {
-  background-color: hsla(0, 0%, 0%, 0);
-}
-
-/* ============ Content ========= */
-.content > h1 {
-  clear: both;
-}
-
-article {
-  max-width: 750px;
-  margin: 0 auto;
-}
-
-#statsWrap,
-article {
-  position: relative;
-  margin: 0.4em auto;
-  box-sizing: border-box;
-  background: hsla(0, 100%, 100%, .75);
-  width: 95%;
-  top: 20px;
-  padding: 1em;
-}
-
-#statsWrap p {
-  margin: 0;
-}
-
-#locationHeader,
-#subNav {
-  position: relative;
-  top: -39px;
-}
-
-#bodyWrap > h1,
-h1#locationHeader {
-  color: #333;
-  background-color: #FCFCF6;
-  border-bottom: 1px solid #333;
-  text-align: center;
-}
-
-/* ============= Footer ============== */
-footer {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  background-color: #111;
-}
-footer nav {
-  float: left;
-  width: 47%;
-}
-
-footer nav ul li {
-  display: inline-block;
-  padding-left: 5px;
-}
-
-footer nav ul li:last-child {
-  border-left: 1px solid #888;
-}
-
-footer p {
-  margin: 0;
-  float: left;
-  color: #999;
-}
-
-/* ============== BodyWrap backgrounds ========= */
-@media only screen and (min-width: 1025px) and (max-width: 1440px) {
-  #bodyWrap {
-    background-image: url('../images/bckgd_lg.jpg');
-  }
-
-  @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-    only screen and (min--moz-device-pixel-ratio: 1.5),
-    only screen and (min-device-pixel-ratio: 1.5) {
-      #bodyWrap {
-        background-image: url('../images/bckgd_lg@2x.jpg');
-      }
-  }
-}
-
-
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  #bodyWrap {
-    background-image: url('../images/bckgd_md.jpg');
-  }
-
-  @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-  only screen and (min--moz-device-pixel-ratio: 1.5),
-  only screen and (min-device-pixel-ratio: 1.5) {
-    #bodyWrap {
-      background-image: url('../images/bckgd_md@2x.jpg');
-    }
-  }
-}
-
-
-@media only screen and (max-width: 480px) {
-  #bodyWrap {
-    background-image: url('../images/bckgd_sm.jpg');
-  }
-
-  @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-  only screen and (min--moz-device-pixel-ratio: 1.5),
-  only screen and (min-device-pixel-ratio: 1.5) {
-    #bodyWrap {
-      background-image: url('../images/bckgd_sm@2x.jpg');
-    }
-  }
+  color: black;
 }
