--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 /* ================= Global Styles ================= */
-html {
+html,
+body {
   height: 100%;
+  width: 100%;
 }
 
 body {
-  width: 100%;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -24,8 +25,42 @@ li {
 a {
   text-decoration: none;
   color: black;
+  text-align: center;
 }
 
 .active {
   color: red;
+}
+
+ul#globalNavContent {
+  padding: 0;
+}
+
+/* Set the placement container as a flexible container, allowing its children
+elements to flex depending on viewport.*/
+#globalNavContent {
+  margin: .5em;
+  box-sizing: border-box;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+
+/* style declarations for the global navigation container boxes */
+li.globalNavList {
+  display: inline-block;
+  background-color: #999;
+  height: 50px;
+  width: 250px;
+  margin: .5em;
+}
+
+/* style declaration to allow anchor tags to inherit parent containers
+for nav */
+.globalNavList a {
+  display: block;
+  height: inherit;
 }
