--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,11 @@ li.globalNavList {
   display: inline-block;
   background-color: #999;
   height: 50px;
-  width: 250px;
+  min-width: 320px;
   margin: .5em;
+  -webkit-flex-grow: 1;
+  -ms-flex-grow: 1;
+  flex-grow: 1;
 }
 
 /* style declaration to allow anchor tags to inherit parent containers
