Added quite a few changes to styles, script and html, including building the content object, to help determine content to be displayed in the application.

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ ul#globalNavContent {
   padding: 0;
 }
 
+#content,
+#remoteData {
+  display: none;
+}
+
 /* Set the placement container as a flexible container, allowing its children
 elements to flex depending on viewport.*/
 #globalNavContent {
