--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,9 @@ li.globalNavList {
   display: inline-block;
   background-color: #999;
   height: 50px;
-  min-width: 320px;
-  margin: .5em;
+  min-width: 300px;
+  margin: .5em auto;
+  box-sizing: border-box;
   -webkit-flex-grow: 1;
   -ms-flex-grow: 1;
   flex-grow: 1;
@@ -87,7 +88,9 @@ article#mainDisplay,
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
+  -webkit-justify-content: space-around;
   justify-content: space-around;
   align-content: stretch;
 }
