--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,14 @@ article#mainDisplay,
   width: inherit;
 }
 
-#remoteData {
+.flexDisplay {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+}
+
+#remoteData {
   -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
   -webkit-justify-content: space-around;
