--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', helvetica, sans-serif;
 }
 
 h1 {
@@ -32,6 +32,29 @@ a {
   color: red;
 }
 
+.flexDisplay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.rowWrap {
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+
+.flexJustify {
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+}
+
+.stretch {
+  -webkit-align-content: stretch;
+  align-content: stretch;
+}
+
+
 ul#globalNavContent {
   padding: 0;
 }
@@ -39,6 +62,11 @@ ul#globalNavContent {
 /* Disabled while building the module for the list item returns -------------- READ THIS ------------ */
 #content {
   display: none;
+}
+
+li.globalNavList,
+#localNav > ul > li {
+  display: inline-block;
 }
 
 /* Set the placement container as a flexible container, allowing its children
@@ -56,10 +84,10 @@ elements to flex depending on viewport.*/
 
 /* style declarations for the global navigation container boxes */
 li.globalNavList {
-  display: inline-block;
   background-color: #999;
   height: 50px;
   width: 33%;
+  min-width: 200px;
   margin: .1em;
   box-sizing: border-box;
   -webkit-flex-grow: 1;
@@ -74,6 +102,22 @@ for nav */
   height: inherit;
 }
 
+#localNav > ul > li {
+  background-color: #999;
+  text-align: center;
+  padding: .5em;
+  margin: .1em;
+  box-sizing: border-box;
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+
+#localNav ul li a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 #content {
   width: 100%;
 }
@@ -83,21 +127,14 @@ article#mainDisplay,
   width: inherit;
 }
 
-.flexDisplay {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-
-#remoteData {
+/*#remoteData {
   -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
   -webkit-justify-content: space-around;
   justify-content: space-around;
   -webkit-align-content: stretch;
   align-content: stretch;
-}
+}*/
 
 #conditionsInfo > #remoteData > li {
   display: inline-block;
@@ -117,6 +154,10 @@ article#mainDisplay,
   margin-top: .6em;
   font-size: 2.2rem;
   color: #555;
+}
+
+#conditionsInfo > #remoteData > li > span small {
+  font-size: 1rem;
 }
 
 @media only screen and (max-width: 768px) {
