--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,16 @@ a {
   -webkit-align-content: stretch;
   align-content: stretch;
 }
+/* =======================  COLORS  =============================== */
+body {
+  color: #555;
+}
+#localNav > ul > li > a,
+#content > figure#backgd {
+  border-color: 2px solid #555;
+}
+
+/* ======================= CONTENT ================================ */
 
 #pageWrap header {
   height: 50px;
@@ -108,8 +118,14 @@ ul#globalNavContent {
 
 #content > figure#backgd {
   width: 100%;
-  height: 500px;
+  height: 475px;
   background-color: #999;
+  border-bottom: 2px solid;
+}
+
+#pageTitle h1 {
+  text-align: center;
+  margin: 1em 0 .5em;
 }
 
 li.globalNavList,
@@ -149,20 +165,43 @@ for nav */
   height: inherit;
 }
 
+#localNav > ul {
+  width: 50%;
+  margin: 0 auto;
+}
+
 #localNav > ul > li {
-  background-color: #999;
+  display: inline-block;
   text-align: center;
   padding: .5em;
-  margin: .1em;
+  margin: .1em 0 2em;
   box-sizing: border-box;
+  width: 49%;
   -webkit-flex-grow: 1;
   flex-grow: 1;
 }
 
-#localNav ul li a {
-  width: 100%;
-  height: 100%;
+#localNav > ul > li > a {
   display: block;
+  width: 90%;
+  height: 2em;
+  display: block;
+  margin: 0 auto;
+  padding-top: 0.5em;
+  border: 2px solid;
+  border-radius: 2px;
+  -webkit-transition: .2s background ease-in-out;
+  -moz-transition: .2s background ease-in-out;
+  transition: .2s background ease-in-out;
+}
+
+#localNav > ul > li > a:hover {
+  background-color: #999;
+}
+
+#localNav > ul > li > a.active {
+  background-color: rgba(0,0,0,0);
+  border: none;
 }
 
 #content {
@@ -192,9 +231,9 @@ article#mainDisplay,
   font-size: .8em;
   color: #666;
   padding: .3em;
-  background-color: #9f9f9f;
   box-sizing: border-box;
   margin: .1em;
+  /*background-color: #9f9f9f; ======== see flex tiles =====*/
 }
 
 #conditionsInfo > #remoteData > li > span {
@@ -316,6 +355,7 @@ only screen and (min-width: 769px) and (min-resolution: 192dpi),
 only screen and (min-width: 769px) and (min-resolution: 2dppx) {
   .santaCruz {
     background-image: url("../images/steamers_lg_2x.jpg");
+    background-position: bottom;
   }
 
   .carpenteria {
@@ -325,15 +365,32 @@ only screen and (min-width: 769px) and (min-resolution: 2dppx) {
   .sanClemente {
     background-image: url("../images/trestles_lg_2x.jpg");
   }
+
+  .carpenteria,
+  .sanClemente {
+    background-position: top;
+  }
 }
 
 
 @media only screen and (max-width: 768px) {
   #content > figure#backgd {
-    height: 250px;
+    height: 300px;
   }
   li.globalNavList {
     width: 100%;
+  }
+
+  #localNav > ul {
+    width: 100%;
+  }
+
+  #localNav > ul > li {
+    padding: .1em;
+  }
+
+  #localNav > ul > li > a {
+    width: 90%;
   }
 
   #conditionsInfo > #localData > li {
